[package]
name = "pkip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ring = "0.16.20"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
