[package]
name = "pkip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
lazy_fn = "1.0.1"
ring = "0.16.20"
# tokio should later become an optional dependency
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
